Fixed some layout issues. Added hero baner background. Changed CuteFall download link.

--- a/src/src/styles.scss
+++ b/src/src/styles.scss
@@ -42,7 +42,9 @@ a.icon > strong {margin-left:.25rem}
 .carousel-cell {width:100%}
 // Flickity - end
 
-
+.hero {
+  background-position-x: center;
+}
 
 // Collapsible
 .collapsible {
@@ -207,6 +209,10 @@ a.icon > strong {margin-left:.25rem}
   border-color: #ffffff;
   background-color: #ffffff;
   color: #00d1b2;
+}
+
+.level-item {
+  flex-basis: min-content;
 }
 
 @media screen and (max-width: 500px) {
